I have added a plum

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ asdjkhadshjgjsf </pre></div>
     <th>Lime</th>
     <th>Lemon</th>
     <th>Orange</th>
+    <th>Plum</th>
   </tr>
   <tr>
     <td colspan="2">Green</td>
     <td>Orange</td>
+    <td>Sweet</td>
   </tr>
 </table>
 
