added an img folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav>
 		<ul class="header__menu">
 			<li id="menu1">Item 1 &#9656; &nbsp;  &gt;</li>
-			<li>Item 2</li>
+			<li id="menu2">Item 2 sdds</li>
 			<li>Item 3</li>
 			<li>Item 4</li>
 		</ul>
