--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css?">
 </head>
 
-<body>	
+<body>
+<img src="img/sweet-smile.jpg" width="50%">	
 <header>
 	<nav>
 		<ul class="header__menu">
