--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
-<img src="img/sweet-smile.jpg" width="50%">	
+<img src="img/sweet-smile.jpg" width="50%" class="hero__img">
+<div>
+  <label for="tocCheckbox" class="toc__header">show table of contents</label>
+  <input type=checkbox id="tocCheckbox">
+  <ol id="toc">
+    <li><a href="table-of-contents.html"><span class="u">↑</span> Full table of contents</a></li>
+    <li><a href="#one">1. It’s not one big thing</a></li>
+    <li><a href="#two">2. You don’t need to throw anything away</a></li>
+    <li><a href="#three">3. It’s easy to get started</a></li>
+    <li><a href="#four">4. It already works</a></li>
+    <li><a href="#five">5. It’s here to stay</a></li>
+  </ol>
+</div>
 <header>
 	<nav>
 		<ul class="header__menu">
@@ -77,7 +89,7 @@ asdjkhadshjgjsf </pre></div>
 
 
 <form method="POST" action="index2.html" class="register-form" target="_blank" novalidate name="sad">
-	<input type=text id="nameuser" name="nameuser" placeholder="Name of User" value=""&lt;script>location.href='http://google.com';</script>">
+	<input type=text id="nameuser" name="nameuser" placeholder="Name of User" value="">
 	<input type=number id="age" name="ageuser" placeholder="Age of User">
 	<input type=email id="age" name="ageuser" placeholder="Emails">
 	<input type=password id="age" name="ageuser" placeholder="Password">
