Css all romb corners in block

--- a/css_bootstrap/index.html
+++ b/css_bootstrap/index.html
@@ -7,42 +7,48 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<header class="container">
-		<div class="header__info">
-			<email>
-				info@shopy.com
-			</email>
-			<tel>
-				996 - 5553 - 453
-			</tel>
-			<div class="socials">
-				<i class="icon-facebook"></i>
-				<i class="icon-twitter"></i>
-				<i class="icon-google-plus"></i>
-				<i class="icon-instagram"></i>
+<div class="wrapper">
+	<header>
+		<div class="container">
+			<div class="header__info">
+				<email>
+					info@shopy.com
+				</email>
+				<tel>
+					996 - 5553 - 453
+				</tel>
+				<div class="socials">
+					<i class="icon-facebook"></i>
+					<i class="icon-twitter"></i>
+					<i class="icon-google-plus"></i>
+					<i class="icon-instagram"></i>
+				</div>
 			</div>
+
+			<nav>
+				<div class="logo">
+					<a href="">
+						<img src="img/logo.png" alt="shope any where">
+						<span>shope any where</span>
+					</a>
+				</div>
+				<ul class="inline-block">
+					<li>Home</li>
+					<li>Products</li>
+					<li>Hot Deals</li>
+					<li>About</li>
+					<li>Contact</li>
+				</ul>
+				<div class="shop_buttons">
+					<button class="lense"></button>
+					<button class="user"></button>
+					<button class="basket"></button>
+				</div>
+			</nav>
 		</div>
-		<nav>
-			<div class="logo">
-				<a href="">
-					<img src="img/logo.png" alt="shope any where">
-					<span>shope any where</span>
-				</a>
-			</div>
-			<ul class="inline-block">
-				<li>Home</li>
-				<li>Products</li>
-				<li>Hot Deals</li>
-				<li>About</li>
-				<li>Contact</li>
-			</ul>
-			<div class="shop_buttons">
-				<button class="lense"></button>
-				<button class="user"></button>
-				<button class="basket"></button>
-			</div>
-		</nav>
 	</header>
+
+	
 	<div class="hero-banner">
 		<div class="hero-banner__content">
 			<h1>FULL WINTER KIT</h1>
@@ -52,13 +58,166 @@
 			<a class="hero-banner__order"></a>
 		</div>	
 	</div>
-	<div class="container">
-		<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, quo eaque autem odit voluptate ut commodi eligendi doloremque quia distinctio ratione, placeat ex dolore recusandae vitae quam facere dolores magnam.</div>
-		<div>Dolor iure quibusdam aperiam. Labore cum laborum ullam expedita architecto, hic doloribus veniam ratione at, ipsam, mollitia? Corporis suscipit, inventore autem officiis non ipsam pariatur accusamus, quae, cumque magni blanditiis!</div>
-		<div>Deserunt commodi pariatur sequi quibusdam incidunt iusto eius quisquam nesciunt officia, odit molestias culpa maiores voluptatem aut. Cumque vero deleniti quod! Debitis deserunt impedit illum culpa odio atque tenetur voluptates?</div>
-		<div>Doloribus repudiandae labore facilis, magnam culpa animi, deserunt recusandae, ea, cum provident voluptatem autem at? Deleniti nulla sed dolores nesciunt fugiat est dolore repellendus voluptas alias esse similique, quae repellat!</div>
+
+
+	<div class="arrivals">
+		
+			<div class="container">
+			<h1>NEW ARRIVALS</h1>
+
+			<div class="arrivals__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</div>
+			
+			<div class="row">
+				<div class="arrivals__product pure-u-3">
+					<a class="product__link">
+						<img src="" alt="product image">
+						<h2>Reebok Track Jacket</h2>
+						<div class="product__prices">
+							$100
+						</div>
+						<div class="product__sizes">
+							sizes: s - m - l - xl
+						</div>
+						<div class="product__circles">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</a>
+					<div class="product_buttons">
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+					</div>
+				</div>
+				
+				<div class="arrivals__product pure-u-3">
+					<a class="product__link">
+						<img src="" alt="product image">
+						<h2>Reebok Track Jacket</h2>
+						<div class="product__prices">
+							$100
+						</div>
+						<div class="product__sizes">
+							sizes: s - m - l - xl
+						</div>
+						<div class="product__circles">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</a>
+					<div class="product_buttons">
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+					</div>
+				</div>
+
+				<div class="arrivals__product pure-u-3">
+					<a class="product__link">
+						<img src="" alt="product image">
+						<h2>Reebok Track Jacket</h2>
+						<div class="product__prices">
+							$100
+						</div>
+						<div class="product__sizes">
+							sizes: s - m - l - xl
+						</div>
+						<div class="product__circles">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</a>
+					<div class="product_buttons">
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+					</div>
+				</div>
+
+				<div class="arrivals__product pure-u-3">
+					<a class="product__link">
+						<img src="" alt="product image">
+						<h2>Reebok Track Jacket</h2>
+						<div class="product__prices">
+							$100
+						</div>
+						<div class="product__sizes">
+							sizes: s - m - l - xl
+						</div>
+						<div class="product__circles">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</a>
+					<div class="product_buttons">
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+						<button class="icon-but"></button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		
 	</div>
 	
 
+	<div class="small-banner container">
+		<div class="small-banner__left">
+			<img src="sale.png" alt="Sale">
+			<h3>FULL WINTER KIT</h3>
+			<span>Half Jacket + Skiny Trousers + Boot leather</span>
+			<span class="sale__price">120$</span>
+		</div>
+		<div class="small-banner__right">
+			
+		</div>
+	</div>
+</div>
+
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3">
+					<div class="logo">
+						<a href="">
+							<img src="img/logo.png" alt="shope any where">
+							<div>shope any where</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<ul class="footer__nav">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+				<div class="col-sm-2">
+					<h2></h2>
+					<span class="payment__cards">
+						<img src="" alt="click to pay">
+						<img src="" alt="click to pay">
+						<img src="" alt="click to pay">
+						<img src="" alt="click to pay">
+						<img src="" alt="click to pay">
+					</span>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
