Add some refactoring to tabs & menu

--- a/css_menu&tabs/index.html
+++ b/css_menu&tabs/index.html
@@ -14,20 +14,22 @@
 
 	<section id="london_content">
 		<p>Сheck back later for updates</p>
+		jskhdkjhu
 	</section>
 	<section id="taipei_content">
-		<div class="vacan_list">
+		<div class="dropdown_list">
 			<input id="vc21" type="checkbox">
 			<label for="vc21">Android Systems Engineers</label>
-			<div>
+			<div class="dropdown_subcont">
 				<p>We are looking for a knowledgeable and experienced candidate for a position as an Android Systems Engineer. The candidate should have demonstrable experience of working with Android Open Source Project builds, across all parts of the stack. </p><p>The candidate should be confident working directly with System Applications and Frameworks, with working knowledge of NDK, JNI and the HAL being a big plus.</p><p>Knowledge of App Development is desirable, particularly with Android and iOS, as is experience working with react-native.</p><p>If you are knowledgeable in most (or all!) of the above, then we want to hear from you!</p>
-				<button class="vacan_but_apply">Apply for this job</button>
+				<a href="mailto:some@gmail.com?subject=Feedback to Taipei Android Engy Vacancy&body=Hi, I am..." class="vacan_but_apply">Apply for this job</a>
 			</div>
 		</div>
-		<div class="vacan_list">
+		<div class="dropdown_list">
 			<input id="vc22" type="checkbox">
 			<label for="vc22">C++ Developers</label>
-			<div><p>We are currently looking to fill a range of low-level C/C++ development positions with varying specialities.</p>
+			<div class="dropdown_subcont">
+				<p>We are currently looking to fill a range of low-level C/C++ development positions with varying specialities.</p>
 				<p>Of particular interest are candidates with strong prior experience in working directly with Bluetooth, specifically with Bluetooth Low Energy. Knowledge working with other low level communications is highly desirable, for example I2C, SPI, USB, networking implementations, etc.</p><p>We are also specifically seeking engineers with strong knowledge of Linux Kernel development and power optimisation. Candidates should have made a demonstrable contribution to at least one relevant open source project, and have experience working with power usage testing hardware. </p>
 				<p>All prospective candidates should have a good working knowledge of C and C++, with awareness of modern C++ standards and techniques.</p><p>Knowledge of working with AOSP images and Android frameworks is highly desirable.</p><p>If you are knowledgeable in most (or all!) of the above, then we want to hear from you!</p>
 				<button class="vacan_but_apply">Apply for this job</button>
