Add some header css

--- a/css_bootstrap/index.html
+++ b/css_bootstrap/index.html
@@ -26,8 +26,8 @@
 			</div>
 
 			<nav>
-				<div class="logo">
-					<a href="">
+				<div class="logo__cont">
+					<a href="#" class="logo">
 						<img src="img/logo.png" alt="shope any where">
 						<span>shope any where</span>
 					</a>
